<resources>
    <string name="app_name">Top Movies</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="Image_Base_Bath">http://image.tmdb.org/t/p/w500/</string>
    <string name="title">Title:</string>
    <string name="image_Description">Image Poster</string>
    <string name="release_date">Release date :</string>
    <string name="overview">Overview:</string>
    <string name="vote">Vote</string>
    <string name="favorites">Favorites</string>
    <string name="top_rated_title">Top Rated</string>
    <string name="most_pop_title">Most Popular</string>
</resources>
